--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,85 +12,24 @@
 				<li><a href="#">Главная</a></li>
 				<li><a href="#">О нас</a></li>
 				<li><a href="#">Контакты</a></li>
-				<li class="login-button"><a href="#">Войти</a></li>
+				<li class="login-button"><a href="/admin">Войти</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
+
 		<div class="post-grid">
+            {% for post in posts %}
 			<article>
 				<header>
-					<h1>Title 1</h1>
-					<p>Author 1</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
+					<h1><a href="">{{ post.title }}</a></h1>
+					<p>Опубликована: {{ post.published_date }}</p>
+                    <p>Автор: {{ post.author }}</p>
+					<p>{{ post.text|linebreaksbr }}</p>
 				</header>
-				<p>Содержание статьи 1...</p>
 			</article>
-			<article>
-				<header>
-					<h1>Title 2</h1>
-					<p>Author 2</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-				</header>
-				<p>Содержание статьи 2...</p>
-			</article>
-			<article>
-				<header>
-					<h1>Title 3</h1>
-					<p>Author 3</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-				</header>
-				<p>Содержание статьи 3...</p>
-			</article>
-			<article>
-				<header>
-					<h1>Title 4</h1>
-					<p>Author 4</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-				</header>
-				<p>Содержание статьи 4...</p>
-			</article>
-			<article>
-				<header>
-					<h1>Title 5</h1>
-					<p>Author 5</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-				</header>
-				<p>Содержание статьи 5...</p>
-			</article>
-			<article>
-				<header>
-					<h1>Title 6</h1>
-					<p>Author 6</p>
-					<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-				</header>
-				<p>Содержание статьи 6...</p>
-			</article>
-			<article>
-				<header>
-					<h1>Title 7</h1>
-					<p>Author 7</p>
-                    <time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-			</header>
-			<p>Содержание статьи 7...</p>
-		</article>
-		<article>
-			<header>
-				<h1>Title 8</h1>
-				<p>Author 8</p>
-				<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-			</header>
-			<p>Содержание статьи 8...</p>
-		</article>
-		<article>
-			<header>
-				<h1>Title 9</h1>
-				<p>Author 9</p>
-				<time datetime="2023-05-13T12:34:56">13 мая 2023 года в 12:34</time>
-			</header>
-			<p>Содержание статьи 9...</p>
-		</article>
-	</div>
-</main>
+            {% endfor %}
+        </div>
+    </main>
 </body>
 </html>
